# ccm

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  justfile
.github/: dependabot.yml
.github/workflows/: build-latest.yml  build-tag.yml  pr-lint.yml
scripts/: install.sh
src/: cli.rs  config.rs  lib.rs  main.rs  profile.rs  tui.rs  update.rs
tests/scripts/: test-safe.sh  test-switch-confirm.sh
