[package]
name = "ccm"
version = "0.2.2"
edition = "2024"
authors = ["caibirdme@qq.com"]

[lib]
name = "ccm"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.3", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "6.0"
anyhow = "1.0"
rpassword = "7.4"
ratatui = "0.29"
crossterm = "0.29"
color-eyre = "0.6"

[profile.release]
opt-level = 3
