[package]
name = "ccm"
version = "0.2.4"
edition = "2024"
authors = ["caibirdme@qq.com"]

[lib]
name = "ccm"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "6.0"
anyhow = "1.0"
rpassword = "7.4"
ratatui = "0.30"
crossterm = "0.29"
color-eyre = "0.6"
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls", "charset", "http2", "system-proxy"], default-features = false }
tar = "0.4"
flate2 = "1"
semver = "1"

[profile.release]
opt-level = 3
